index.html: traceroute, datenschuetzen

--- a/index.html
+++ b/index.html
@@ -202,10 +202,32 @@ template: internet
 
 --
 
+
 ### Wer bezahlt diese Kosten?
 
 ---
+template: internet
 
+## traceroute (amazon.de)
+
+<img src="images/traceroute/amazon_de.png" height="400">
+
+---
+template: internet
+
+## traceroute (ard.de)
+
+<img src="images/traceroute/ard.png" height="400">
+
+---
+
+template: internet
+
+## traceroute (facebook)
+
+<img src="images/traceroute/facebook.png" height="400">
+
+---
 # Welche Daten gebe ich preis?
 
 - alles was man ins Benutzerprofil beim Dienstanbieter schreibt
@@ -242,6 +264,43 @@ template: internet
 - passende Nachrichten filtern
   - nützlich: Ich bekomme nur Nachrichten, die mich interessieren.
   - schlecht: Filterblasen, Echokammer
+
+---
+name: datenschuetzen
+
+# Wie schütze ich meine privaten Daten?
+
+---
+template: datenschuetzen
+
+## Datensparsamkeit
+
+- Möglichst nur Daten preisgeben, die für die Erbringung des Dienstes nötig sind.
+- mehrere Identitäten benutzen
+- eine eindeutige E-Mail-Adresse pro Dienst
+
+---
+template: datenschuetzen
+
+# Datensicherheit
+  
+- Verschlüsseln
+  - https://
+  - Mails: GPG, S/MIME
+  - Festplatte verschlüsseln
+  - Firmwarepasswort setzen
+
+---
+template: datenschuetzen
+
+# Weitere Möglichkeiten
+
+- Anonymisieren
+  - Tor (The Onion Router)
+- Daten löschen
+  - zuständigen Webmaster benachrichtigen
+  - aus Index von Suchdiensten entfernen lassen
+  - das Internet vergisst nicht?!
 
 ---
 class: middle, center
