index.html: Tor, Feinschliff

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@ class: center, middle
 
 - Vorstellung: Chaos macht Schule
 - Was bedeutet Privatsphäre?
+- Umfrage
 - Wie funktioniert das Internet?
-- Was macht ihr im Internet?
-- Welche Daten hinterlasst Ihr im Internet?
+- Welche Daten gebe ich preis?
 - Wie kann man seine Privatsphäre schützen?
 
 ---
@@ -282,7 +282,7 @@ template: datenschuetzen
 ---
 template: datenschuetzen
 
-# Datensicherheit
+## Datensicherheit
   
 - Verschlüsseln
   - https://
@@ -293,11 +293,20 @@ template: datenschuetzen
 ---
 template: datenschuetzen
 
-# Weitere Möglichkeiten
+## Weitere Möglichkeiten
 
 - Anonymisieren
-  - Tor (The Onion Router)
+  - Tor (The Onion Router) 
+
+  <img src="images/tor.png">
+
+---
+template: datenschuetzen
+
+## Weitere Möglichkeiten
+
 - Daten löschen
+
   - zuständigen Webmaster benachrichtigen
   - aus Index von Suchdiensten entfernen lassen
   - das Internet vergisst nicht?!
